# ghrocker

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflow/: test-build.yaml
.github/workflows/: build-image.yaml  test-build.yaml
src/ghrocker/: ghpages_extension.py  ghrocker.py
src/ghrocker/templates/: ghpages_snippet.Dockerfile.em
test/test_site/: Gemfile
test/test_site/_posts/: 2023-02-16-welcome-to-jekyll.markdown
